Fully Implemented Redis for caching