@@ -9,10 +9,14 @@ import com.irons.library_management_system_backend.mapper.BookMapper;
 import com.irons.library_management_system_backend.repository.BooksRepository;
 import com.irons.library_management_system_backend.repository.UsersRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class BooksService {
@@ -26,6 +30,7 @@ public class BooksService {
     @Autowired
     private BookMapper bookMapper;
 
+    @Cacheable(value = "allBooksCache")
     public List<BookResponseDTO> findAllBooks(){
 
         List<Books> listOfAllBooks = booksRepository.findAll();
@@ -34,9 +39,10 @@ public class BooksService {
 
         return listOfAllBooks.stream()
                 .map(bookMapper::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    @Cacheable(value = "bookDetailsByIdCache", key = "#bookId")
     public BookResponseDTO findBookById(Long bookId) {
 
         Books book = booksRepository.findById(bookId)
@@ -45,6 +51,7 @@ public class BooksService {
         return bookMapper.toResponseDTO(book);
     }
 
+    @Cacheable(value = "bookDetailsByNameCache", key = "#bookName")
     public BookResponseDTO findBookByName(String bookName) {
 
         Books book = booksRepository.findByBookName(bookName);
@@ -54,6 +61,7 @@ public class BooksService {
         return bookMapper.toResponseDTO(book);
     }
 
+    @Cacheable(value = "booksByAuthorCache", key = "#booksAuthor")
     public List<BookResponseDTO> findBooksByAuthor(String booksAuthor) {
 
         List<Books> booksOfAuthor = booksRepository.findAllByBookAuthor(booksAuthor);
@@ -62,9 +70,10 @@ public class BooksService {
 
         return booksOfAuthor.stream()
                 .map(bookMapper::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    @Cacheable(value = "booksByGenreCache", key = "#booksGenre")
     public List<BookResponseDTO> findBooksByGenre(String booksGenre) {
 
         List<Books> booksOfGenre = booksRepository.findAllByBookGenre(booksGenre);
@@ -73,9 +82,10 @@ public class BooksService {
 
         return booksOfGenre.stream()
                 .map(bookMapper::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    @Cacheable(value = "availableBooksCache")
     public List<BookResponseDTO> findAllAvailableBooks() {
 
         List<Books> allBooks = booksRepository.findAllByIsBookBorrowed(false);
@@ -84,9 +94,10 @@ public class BooksService {
 
         return allBooks.stream()
                 .map(bookMapper::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    @Cacheable(value = "unavailableBooksCache")
     public List<BookResponseDTO> findAllUnavailableBooks() {
 
         List<Books> allBooks = booksRepository.findAllByIsBookBorrowed(true);
@@ -95,9 +106,13 @@ public class BooksService {
 
         return allBooks.stream()
                 .map(bookMapper::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    @Caching(evict = {
+            @CacheEvict(value = "allBooksCache", allEntries = true),
+            @CacheEvict(value = "availableBooksCache", allEntries = true)
+    })
     public void addBook(BookRequestDTO bookRequestDTO) {
 
         Books book = new Books();
@@ -109,6 +124,15 @@ public class BooksService {
         booksRepository.save(book);
     }
 
+    @Caching(evict = {
+            @CacheEvict(value = "allBooksCache", allEntries = true),
+            @CacheEvict(value = "availableBooksCache", allEntries = true),
+            @CacheEvict(value = "unavailableBooksCache", allEntries = true),
+            @CacheEvict(value = "booksByAuthorCache", allEntries = true),
+            @CacheEvict(value = "booksByGenreCache", allEntries = true),
+            @CacheEvict(value = "bookDetailsByNameCache", allEntries = true),
+            @CacheEvict(value = "bookDetailsByIdCache", key = "#bookId")
+    })
     public void removeBook(Long bookId) {
 
         Books book = booksRepository.findById(bookId)
@@ -117,6 +141,13 @@ public class BooksService {
         booksRepository.delete(book);
     }
 
+    @Caching(evict = {
+            @CacheEvict(value = "allBooksCache", allEntries = true),
+            @CacheEvict(value = "availableBooksCache", allEntries = true),
+            @CacheEvict(value = "unavailableBooksCache", allEntries = true),
+            @CacheEvict(value = "bookDetailsByIdCache", key = "#bookId"),
+            @CacheEvict(value = "booksBorrowedByUserCache", key = "#userId")
+    })
     @Transactional // ◄ Added to safely rollback if either save step encounters a system glitch
     public void borrowBook(Long bookId, Long userId) {
 
@@ -138,6 +169,13 @@ public class BooksService {
         usersRepository.save(user);
     }
 
+    @Caching(evict = {
+            @CacheEvict(value = "allBooksCache", allEntries = true),
+            @CacheEvict(value = "availableBooksCache", allEntries = true),
+            @CacheEvict(value = "unavailableBooksCache", allEntries = true),
+            @CacheEvict(value = "bookDetailsByIdCache", key = "#bookId"),
+            @CacheEvict(value = "booksBorrowedByUserCache", key = "#userId")
+    })
     @Transactional
     public void returnBook(Long bookId, Long userId) {
 
